ligolw_combine_segments is used in workflow

--- a/workflow/configuration/executables_osgconnect.ini
+++ b/workflow/configuration/executables_osgconnect.ini
@@ -11,13 +11,13 @@
 ;
 [executables]
 ; these executables are run by the workflow generation script
-ligolw_combine_segments = ${which:ligolw_combine_segments}
 segment_query = ${which:pycbc_losc_segment_query}
 segments_from_cats = ${which:ligolw_segments_from_cats_dqsegdb}
 results_page = ${which:pycbc_make_html_page}
 
 ; these executables are run in the workflow
 llwadd = /opt/pycbc/pycbc-software/bin/ligolw_add
+ligolw_combine_segments = /opt/pycbc/pycbc-software/bin/ligolw_combine_segments
 bank2hdf = /opt/pycbc/pycbc-software/bin/pycbc_coinc_bank2hdf
 average_psd = /opt/pycbc/pycbc-software/bin/pycbc_average_psd
 calculate_psd = /opt/pycbc/pycbc-software/bin/pycbc_calculate_psd
