Fixed incorrect comment that @tdent pointed out

--- a/workflow/configuration/analysis.ini
+++ b/workflow/configuration/analysis.ini
@@ -95,7 +95,7 @@ max-hierarchical-removal = 1
 [ligolw_combine_segments]
 
 [splitbank]
-; split the template bank up randomly between jobs to ensure equal run time
+; split the template bank up by chrip mass between jobs to ensure equal run time
 mchirp-sort =
 
 [inspiral]
