run minifollowups and results page in local universe

--- a/workflow/configuration/executables_osgconnect.ini
+++ b/workflow/configuration/executables_osgconnect.ini
@@ -404,6 +404,22 @@ pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = true
 
-[pegasus_profile-results_page]
+[pegasus_profile-foreground_minifollowup]
+condor|getenv = True
 condor|universe = local
+condor|requirements = True
 
+[pegasus_profile-injection_minifollowup]
+condor|getenv = True
+condor|universe = local
+condor|requirements = True
+
+[pegasus_profile-singles_minifollowup]
+condor|getenv = True
+condor|universe = local
+condor|requirements = True
+
+[pegasus_profile-results_page]
+condor|getenv = True
+condor|universe = local
+condor|requirements = True
