--- a/workflow/configuration/executables_osgconnect.ini
+++ b/workflow/configuration/executables_osgconnect.ini
@@ -405,19 +405,19 @@ hints|execution.site = osgconnect
 pycbc|installed = true
 
 [pegasus_profile-foreground_minifollowup]
-condor|getenv = True
-condor|universe = local
-condor|requirements = True
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = true
 
 [pegasus_profile-injection_minifollowup]
-condor|getenv = True
-condor|universe = local
-condor|requirements = True
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = true
 
 [pegasus_profile-singles_minifollowup]
-condor|getenv = True
-condor|universe = local
-condor|requirements = True
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = true
 
 [pegasus_profile-results_page]
 condor|getenv = True
