fix local universe paths

--- a/workflow/configuration/executables_osgconnect.ini
+++ b/workflow/configuration/executables_osgconnect.ini
@@ -13,6 +13,11 @@
 ; these executables are run by the workflow generation script
 segment_query = ${which:pycbc_losc_segment_query}
 segments_from_cats = ${which:ligolw_segments_from_cats_dqsegdb}
+
+; these executables are run in the local universe
+foreground_minifollowup = ${which:pycbc_foreground_minifollowup}
+injection_minifollowup = ${which:pycbc_injection_minifollowup}
+singles_minifollowup = ${which:pycbc_sngl_minifollowup}
 results_page = ${which:pycbc_make_html_page}
 
 ; these executables are run in the workflow
@@ -60,11 +65,6 @@ statmap = /opt/pycbc/pycbc-software/bin/pycbc_coinc_statmap
 statmap_inj = /opt/pycbc/pycbc-software/bin/pycbc_coinc_statmap_inj
 strip_injections = /opt/pycbc/pycbc-software/bin/pycbc_strip_injections
 tmpltbank = /opt/pycbc/pycbc-software/bin/pycbc_geom_nonspinbank
-
-; #################### Mini Followup #########################################
-foreground_minifollowup = /opt/pycbc/pycbc-software/bin/pycbc_foreground_minifollowup
-injection_minifollowup = /opt/pycbc/pycbc-software/bin/pycbc_injection_minifollowup
-singles_minifollowup = /opt/pycbc/pycbc-software/bin/pycbc_sngl_minifollowup
 
 page_injinfo = /opt/pycbc/pycbc-software/bin/pycbc_page_injinfo
 page_coincinfo = /opt/pycbc/pycbc-software/bin/pycbc_page_coincinfo
