add container entry for plot_singles_timefreq

--- a/workflow/configuration/executables_osgconnect.ini
+++ b/workflow/configuration/executables_osgconnect.ini
@@ -369,6 +369,11 @@ pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
+[pegasus_profile-plot_singles_timefreq]
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
 [pegasus_profile-plot_waveform]
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
