run minifollowup in local universe

--- a/workflow/configuration/executables_osgconnect.ini
+++ b/workflow/configuration/executables_osgconnect.ini
@@ -410,19 +410,19 @@ hints|execution.site = osgconnect
 pycbc|installed = true
 
 [pegasus_profile-foreground_minifollowup]
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = true
+condor|getenv = True
+condor|universe = local
+condor|requirements = True
 
 [pegasus_profile-injection_minifollowup]
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = true
+condor|getenv = True
+condor|universe = local
+condor|requirements = True
 
 [pegasus_profile-singles_minifollowup]
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = true
+condor|getenv = True
+condor|universe = local
+condor|requirements = True
 
 [pegasus_profile-results_page]
 condor|getenv = True
