--- a/workflow/configuration/executables_osgconnect.ini
+++ b/workflow/configuration/executables_osgconnect.ini
@@ -64,7 +64,6 @@ splitbank = /opt/pycbc/pycbc-software/bin/pycbc_hdf5_splitbank
 statmap = /opt/pycbc/pycbc-software/bin/pycbc_coinc_statmap
 statmap_inj = /opt/pycbc/pycbc-software/bin/pycbc_coinc_statmap_inj
 strip_injections = /opt/pycbc/pycbc-software/bin/pycbc_strip_injections
-tmpltbank = /opt/pycbc/pycbc-software/bin/pycbc_geom_nonspinbank
 
 page_injinfo = /opt/pycbc/pycbc-software/bin/pycbc_page_injinfo
 page_coincinfo = /opt/pycbc/pycbc-software/bin/pycbc_page_coincinfo
@@ -97,29 +96,33 @@ condor|request_cpus = 1
 
 
 ; #################### Pegasus Configuration for Executable ##################
-[pegasus_profile-calculate_psd]
-condor|+InitialRequestMemory = 2000
-condor|request_cpus = ${calculate_psd|cores}
+
+; ### these executables are run in the local universe
+
+[pegasus_profile-foreground_minifollowup]
+condor|getenv = True
+condor|universe = local
+condor|requirements = True
+
+[pegasus_profile-injection_minifollowup]
+condor|getenv = True
+condor|universe = local
+condor|requirements = True
+
+[pegasus_profile-singles_minifollowup]
+condor|getenv = True
+condor|universe = local
+condor|requirements = True
+
+[pegasus_profile-results_page]
+condor|getenv = True
+condor|universe = local
+condor|requirements = True
+
+; ### these executables are run in containers on the condor pool
+
+[pegasus_profile-llwadd]
 dagman|priority = 5000
-dagman|retry = 10
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-injections]
-dagman|priority = 700
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-bank2hdf]
-dagman|priority = 5000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-merge_psds]
-dagman|priority = 2000
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
@@ -130,38 +133,22 @@ pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
-[pegasus_profile-strip_injections]
+[pegasus_profile-bank2hdf]
 dagman|priority = 5000
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
-[pegasus_profile-llwadd]
-dagman|priority = 5000
+[pegasus_profile-average_psd]
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
-[pegasus_profile-splitbank]
+[pegasus_profile-calculate_psd]
+condor|+InitialRequestMemory = 2000
+condor|request_cpus = ${calculate_psd|cores}
 dagman|priority = 5000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-foreground_censor]
-dagman|priority = 5000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-foreground_minifollowup]
-dagman|priority = 5000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-injection_minifollowup]
-dagman|priority = 5000
+dagman|retry = 10
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
@@ -169,6 +156,11 @@ pycbc|installed = True
 [pegasus_profile-coinc]
 dagman|priority = 5000
 condor|+InitialRequestMemory = 3000
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-combine_statmap]
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
@@ -187,9 +179,38 @@ pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
+[pegasus_profile-fit_over_param]
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-foreground_censor]
+dagman|priority = 5000
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-hdfinjfind]
+condor|+InitialRequestMemory = 5000
+dagman|priority = 500
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
 [pegasus_profile-hdf_trigger_merge]
 dagman|priority = 5000
 condor|+InitialRequestMemory = 8000
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-inj_cut]
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-injections]
+dagman|priority = 700
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
@@ -203,108 +224,16 @@ pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
+[pegasus_profile-merge_psds]
+dagman|priority = 2000
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
 [pegasus_profile-optimal_snr]
 condor|request_cpus = ${optimal_snr|cores}
 condor|+InitialRequestMemory = 8000
 dagman|priority = 5000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-page_snglinfo]
-condor|+InitialRequestMemory = 4000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-plot_binnedhist]
-condor|+InitialRequestMemory = 8000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-plot_coinc_snrchi]
-condor|+InitialRequestMemory = 8000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-plot_hist]
-condor|+InitialRequestMemory = 8000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-plot_singles]
-condor|+InitialRequestMemory = 8000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-plot_snrchi]
-condor|+InitialRequestMemory = 8000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-plot_spectrum]
-condor|+InitialRequestMemory = 3000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-plot_trigger_timeseries]
-condor|+InitialRequestMemory = 8000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-singles_minifollowup]
-condor|+InitialRequestMemory = 8000
-dagman|priority = 500
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-single_template]
-condor|+InitialRequestMemory = 3000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-single_template_plot]
-condor|+InitialRequestMemory = 3000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-statmap]
-condor|+InitialRequestMemory = 8000
-dagman|priority = 500
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-statmap_inj]
-condor|+InitialRequestMemory = 8000
-dagman|priority = 500
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-hdfinjfind]
-condor|+InitialRequestMemory = 5000
-dagman|priority = 500
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-plot_bank]
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-fit_over_param]
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
@@ -339,17 +268,19 @@ pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
-[pegasus_profile-page_injinfo]
+[pegasus_profile-plot_bank]
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
-[pegasus_profile-page_coincinfo]
+[pegasus_profile-plot_binnedhist]
+condor|+InitialRequestMemory = 8000
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
-[pegasus_profile-page_foundmissed]
+[pegasus_profile-plot_coinc_snrchi]
+condor|+InitialRequestMemory = 8000
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
@@ -359,27 +290,18 @@ pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
-[pegasus_profile-plot_snrifar]
+[pegasus_profile-plot_gating]
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = true
+
+[pegasus_profile-plot_hist]
+condor|+InitialRequestMemory = 8000
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
-[pegasus_profile-plot_snrratehist]
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-plot_singles_timefreq]
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-plot_waveform]
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-average_psg]
+[pegasus_profile-plot_qscan]
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
@@ -399,32 +321,105 @@ pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
+[pegasus_profile-plot_singles]
+condor|+InitialRequestMemory = 8000
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-plot_snrchi]
+condor|+InitialRequestMemory = 8000
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-plot_snrifar]
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-plot_spectrum]
+condor|+InitialRequestMemory = 3000
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
 [pegasus_profile-plot_throughput]
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = true
 
-[pegasus_profile-plot_gating]
+[pegasus_profile-splitbank]
+dagman|priority = 5000
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
-pycbc|installed = true
+pycbc|installed = True
 
-[pegasus_profile-foreground_minifollowup]
-condor|getenv = True
-condor|universe = local
-condor|requirements = True
+[pegasus_profile-statmap]
+condor|+InitialRequestMemory = 8000
+dagman|priority = 500
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
 
-[pegasus_profile-injection_minifollowup]
-condor|getenv = True
-condor|universe = local
-condor|requirements = True
+[pegasus_profile-statmap_inj]
+condor|+InitialRequestMemory = 8000
+dagman|priority = 500
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
 
-[pegasus_profile-singles_minifollowup]
-condor|getenv = True
-condor|universe = local
-condor|requirements = True
+[pegasus_profile-strip_injections]
+dagman|priority = 5000
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
 
-[pegasus_profile-results_page]
-condor|getenv = True
-condor|universe = local
-condor|requirements = True
+[pegasus_profile-page_injinfo]
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-page_coincinfo]
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-page_snglinfo]
+condor|+InitialRequestMemory = 4000
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-plot_trigger_timeseries]
+condor|+InitialRequestMemory = 8000
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-single_template_plot]
+condor|+InitialRequestMemory = 3000
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-single_template]
+condor|+InitialRequestMemory = 3000
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-plot_singles_timefreq]
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-plot_snrratehist]
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-plot_waveform]
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
