Instructions for running workflow on OSG (#2)
* workflow script for osgconnect

* instructions for running workflow

* authors and acks

* Update README.md

* Update README.md

* Update README.md

* enable x509 and turn integrity checking on

* enforce a globally unique workflow directory

* don't override number of banks in ini file

* workflow generation for SUGWG cluster

* add workflow generation script for OrangeGrid

* add inspiral memory requirements

* fixed submit command

* fixed paths for OrangeGrid

* add executable path

* existing directory is an error

* more reasonable memory requirements for osg

* use 1.13.0 tag

* instructions on how to get proxy

* Add links to introductory tutorials

* Update README.md

* release version of requirements.txt

* renamed atlas script

* Add documentation on scripts

* add atlas script

* fixed paths

* Update README.md

* add data note

* More details

* Update README.md

* typo

* typos

* We're not using SciTokens yet

* double the number of splits to reduce memory size

* allow the github user to be specified when downloading config files

* don't override the request_memory expression

* change install order to be more logical

* run minifollowups and results page in local universe

* make the workflows directory if it doesn't exist

* merge scripts into a single file

* fixed local web path

* run submit_dax explicitly

* fixed typo

* set InitialRequestMemory and indent

* reduce memory request

* reduce core request for psd

* double requirement for psd jobs

* fixed classad typo

* run minifollowup in container

* fix local universe paths

* local og jobs need mkl

* add container entry for plot_singles_timefreq

* turn off integrity until https://jira.isi.edu/browse/PM-1329 is fixed

* run minifollowup in local universe

* Add note about held jobs

* list profiles in same order as executables

* 

--- a/workflow/configuration/executables_osgconnect.ini
+++ b/workflow/configuration/executables_osgconnect.ini
@@ -13,6 +13,11 @@
 ; these executables are run by the workflow generation script
 segment_query = ${which:pycbc_losc_segment_query}
 segments_from_cats = ${which:ligolw_segments_from_cats_dqsegdb}
+
+; these executables are run in the local universe
+foreground_minifollowup = ${which:pycbc_foreground_minifollowup}
+injection_minifollowup = ${which:pycbc_injection_minifollowup}
+singles_minifollowup = ${which:pycbc_sngl_minifollowup}
 results_page = ${which:pycbc_make_html_page}
 
 ; these executables are run in the workflow
@@ -59,12 +64,6 @@ splitbank = /opt/pycbc/pycbc-software/bin/pycbc_hdf5_splitbank
 statmap = /opt/pycbc/pycbc-software/bin/pycbc_coinc_statmap
 statmap_inj = /opt/pycbc/pycbc-software/bin/pycbc_coinc_statmap_inj
 strip_injections = /opt/pycbc/pycbc-software/bin/pycbc_strip_injections
-tmpltbank = /opt/pycbc/pycbc-software/bin/pycbc_geom_nonspinbank
-
-; #################### Mini Followup #########################################
-foreground_minifollowup = /opt/pycbc/pycbc-software/bin/pycbc_foreground_minifollowup
-injection_minifollowup = /opt/pycbc/pycbc-software/bin/pycbc_injection_minifollowup
-singles_minifollowup = /opt/pycbc/pycbc-software/bin/pycbc_sngl_minifollowup
 
 page_injinfo = /opt/pycbc/pycbc-software/bin/pycbc_page_injinfo
 page_coincinfo = /opt/pycbc/pycbc-software/bin/pycbc_page_coincinfo
@@ -84,7 +83,7 @@ plot_waveform = /opt/pycbc/pycbc-software/bin/pycbc_plot_waveform
 ; This is overriden by profile information set for specific job types
 
 ; This sets the initial memory footprint request
-condor|+InitialRequestMemory = 1980
+condor|+InitialRequestMemory = 1920
 ; Use the initial request unless the job has been evicted for using too much
 ; memory. In that case, ask for 50% more than the last resident memory use,
 ; ramping up by the number of job starts.
@@ -97,29 +96,33 @@ condor|request_cpus = 1
 
 
 ; #################### Pegasus Configuration for Executable ##################
-[pegasus_profile-calculate_psd]
-condor|+InitialRequestMemory = 8000
-condor|request_cpus = ${calculate_psd|cores}
+
+; ### these executables are run in the local universe
+
+[pegasus_profile-foreground_minifollowup]
+condor|getenv = True
+condor|universe = local
+condor|requirements = True
+
+[pegasus_profile-injection_minifollowup]
+condor|getenv = True
+condor|universe = local
+condor|requirements = True
+
+[pegasus_profile-singles_minifollowup]
+condor|getenv = True
+condor|universe = local
+condor|requirements = True
+
+[pegasus_profile-results_page]
+condor|getenv = True
+condor|universe = local
+condor|requirements = True
+
+; ### these executables are run in containers on the condor pool
+
+[pegasus_profile-llwadd]
 dagman|priority = 5000
-dagman|retry = 10
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-injections]
-dagman|priority = 700
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-bank2hdf]
-dagman|priority = 5000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-merge_psds]
-dagman|priority = 2000
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
@@ -130,38 +133,22 @@ pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
-[pegasus_profile-strip_injections]
+[pegasus_profile-bank2hdf]
 dagman|priority = 5000
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
-[pegasus_profile-llwadd]
-dagman|priority = 5000
+[pegasus_profile-average_psd]
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
-[pegasus_profile-splitbank]
+[pegasus_profile-calculate_psd]
+condor|+InitialRequestMemory = 2000
+condor|request_cpus = ${calculate_psd|cores}
 dagman|priority = 5000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-foreground_censor]
-dagman|priority = 5000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-foreground_minifollowup]
-dagman|priority = 5000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-injection_minifollowup]
-dagman|priority = 5000
+dagman|retry = 10
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
@@ -169,6 +156,11 @@ pycbc|installed = True
 [pegasus_profile-coinc]
 dagman|priority = 5000
 condor|+InitialRequestMemory = 3000
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-combine_statmap]
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
@@ -182,113 +174,18 @@ pycbc|installed = True
 
 [pegasus_profile-fit_by_template]
 dagman|priority = 5000
-condor|+InitialRequestMemory = 10000
+condor|+InitialRequestMemory = 8000
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
-[pegasus_profile-hdf_trigger_merge]
+[pegasus_profile-fit_over_param]
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-foreground_censor]
 dagman|priority = 5000
-condor|+InitialRequestMemory = 40000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-inspiral]
-condor|periodic_hold = (JobStatus == 2) && ((CurrentTime - EnteredCurrentStatus) > (2 * 86400))
-condor|periodic_release = ((HoldReasonCode =?= 34) || (HoldReasonCode =?= 26)) || ((JobStatus == 5) && (HoldReasonCode == 3) && (NumJobStarts < 5) && ((CurrentTime - EnteredCurrentStatus) > (300)))
-condor|periodic_remove = (NumJobStarts >= 5)
-condor|request_disk = 2000
-condor|request_memory = 1920
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-optimal_snr]
-condor|request_cpus = ${optimal_snr|cores}
-condor|+InitialRequestMemory = 10000
-dagman|priority = 5000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-page_snglinfo]
-condor|+InitialRequestMemory = 4000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-plot_binnedhist]
-condor|+InitialRequestMemory = 8000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-plot_coinc_snrchi]
-condor|+InitialRequestMemory = 8000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-plot_hist]
-condor|+InitialRequestMemory = 8000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-plot_singles]
-condor|+InitialRequestMemory = 30000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-plot_snrchi]
-condor|+InitialRequestMemory = 8000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-plot_spectrum]
-condor|+InitialRequestMemory = 3000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-plot_trigger_timeseries]
-condor|+InitialRequestMemory = 10000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-singles_minifollowup]
-condor|+InitialRequestMemory = 20000
-dagman|priority = 500
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-single_template]
-condor|+InitialRequestMemory = 3000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-single_template_plot]
-condor|+InitialRequestMemory = 3000
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-statmap]
-condor|+InitialRequestMemory = 10000
-dagman|priority = 500
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-statmap_inj]
-condor|+InitialRequestMemory = 10000
-dagman|priority = 500
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
@@ -300,12 +197,43 @@ pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
-[pegasus_profile-plot_bank]
+[pegasus_profile-hdf_trigger_merge]
+dagman|priority = 5000
+condor|+InitialRequestMemory = 8000
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
-[pegasus_profile-fit_over_param]
+[pegasus_profile-inj_cut]
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-injections]
+dagman|priority = 700
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-inspiral]
+condor|periodic_hold = (JobStatus == 2) && ((CurrentTime - EnteredCurrentStatus) > (2 * 86400))
+condor|periodic_release = ((HoldReasonCode =?= 34) || (HoldReasonCode =?= 26)) || ((JobStatus == 5) && (HoldReasonCode == 3) && (NumJobStarts < 5) && ((CurrentTime - EnteredCurrentStatus) > (300)))
+condor|periodic_remove = (NumJobStarts >= 5)
+condor|request_disk = 2000
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-merge_psds]
+dagman|priority = 2000
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-optimal_snr]
+condor|request_cpus = ${optimal_snr|cores}
+condor|+InitialRequestMemory = 8000
+dagman|priority = 5000
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
@@ -340,17 +268,19 @@ pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
-[pegasus_profile-page_injinfo]
+[pegasus_profile-plot_bank]
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
-[pegasus_profile-page_coincinfo]
+[pegasus_profile-plot_binnedhist]
+condor|+InitialRequestMemory = 8000
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
-[pegasus_profile-page_foundmissed]
+[pegasus_profile-plot_coinc_snrchi]
+condor|+InitialRequestMemory = 8000
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
@@ -360,22 +290,18 @@ pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
-[pegasus_profile-plot_snrifar]
+[pegasus_profile-plot_gating]
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = true
+
+[pegasus_profile-plot_hist]
+condor|+InitialRequestMemory = 8000
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
-[pegasus_profile-plot_snrratehist]
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-plot_waveform]
-pycbc|site = osgconnect
-hints|execution.site = osgconnect
-pycbc|installed = True
-
-[pegasus_profile-average_psg]
+[pegasus_profile-plot_qscan]
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
@@ -395,16 +321,105 @@ pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
+[pegasus_profile-plot_singles]
+condor|+InitialRequestMemory = 8000
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-plot_snrchi]
+condor|+InitialRequestMemory = 8000
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-plot_snrifar]
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-plot_spectrum]
+condor|+InitialRequestMemory = 3000
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
 [pegasus_profile-plot_throughput]
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = true
 
-[pegasus_profile-plot_gating]
+[pegasus_profile-splitbank]
+dagman|priority = 5000
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
-pycbc|installed = true
+pycbc|installed = True
 
-[pegasus_profile-results_page]
-condor|universe = local
+[pegasus_profile-statmap]
+condor|+InitialRequestMemory = 8000
+dagman|priority = 500
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
 
+[pegasus_profile-statmap_inj]
+condor|+InitialRequestMemory = 8000
+dagman|priority = 500
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-strip_injections]
+dagman|priority = 5000
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-page_injinfo]
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-page_coincinfo]
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-page_snglinfo]
+condor|+InitialRequestMemory = 4000
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-plot_trigger_timeseries]
+condor|+InitialRequestMemory = 8000
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-single_template_plot]
+condor|+InitialRequestMemory = 3000
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-single_template]
+condor|+InitialRequestMemory = 3000
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-plot_singles_timefreq]
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-plot_snrratehist]
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
+
+[pegasus_profile-plot_waveform]
+pycbc|site = osgconnect
+hints|execution.site = osgconnect
+pycbc|installed = True
