InitialRequestMemory is computed based on DAGNodeRetry that Pegasus sets for each job.

--- a/workflow/configuration/executables_osgconnect.ini
+++ b/workflow/configuration/executables_osgconnect.ini
@@ -145,7 +145,9 @@ hints|execution.site = osgconnect
 pycbc|installed = True
 
 [pegasus_profile-calculate_psd]
-condor|+InitialRequestMemory = 2000
+; pycbc|start_memory=2000
+; condor|+InitialRequestMemory = ifthenelse(isundefined(DAGNodeRetry) || DAGNodeRetry == 0, %(pycbc|start_memory), %(pycbc|start_memory)*DAGNodeRetry)
+condor|+InitialRequestMemory = ifthenelse(isundefined(DAGNodeRetry) || DAGNodeRetry == 0, 2000, 2000*DAGNodeRetry)
 condor|request_cpus = ${calculate_psd|cores}
 dagman|priority = 5000
 dagman|retry = 10
@@ -155,7 +157,7 @@ pycbc|installed = True
 
 [pegasus_profile-coinc]
 dagman|priority = 5000
-condor|+InitialRequestMemory = 3000
+condor|+InitialRequestMemory = ifthenelse(isundefined(DAGNodeRetry) || DAGNodeRetry == 0, 3000, 3000*DAGNodeRetry)
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
@@ -167,14 +169,14 @@ pycbc|installed = True
 
 [pegasus_profile-distribute_background_bins]
 dagman|priority = 5000
-condor|+InitialRequestMemory = 6000
+condor|+InitialRequestMemory = ifthenelse(isundefined(DAGNodeRetry) || DAGNodeRetry == 0, 6000, 6000*DAGNodeRetry)
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
 [pegasus_profile-fit_by_template]
 dagman|priority = 5000
-condor|+InitialRequestMemory = 8000
+condor|+InitialRequestMemory = ifthenelse(isundefined(DAGNodeRetry) || DAGNodeRetry == 0, 8000, 8000*DAGNodeRetry)
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
@@ -191,7 +193,7 @@ hints|execution.site = osgconnect
 pycbc|installed = True
 
 [pegasus_profile-hdfinjfind]
-condor|+InitialRequestMemory = 5000
+condor|+InitialRequestMemory = ifthenelse(isundefined(DAGNodeRetry) || DAGNodeRetry == 0, 5000, 5000*DAGNodeRetry)
 dagman|priority = 500
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
@@ -199,7 +201,7 @@ pycbc|installed = True
 
 [pegasus_profile-hdf_trigger_merge]
 dagman|priority = 5000
-condor|+InitialRequestMemory = 8000
+condor|+InitialRequestMemory = ifthenelse(isundefined(DAGNodeRetry) || DAGNodeRetry == 0, 8000, 8000*DAGNodeRetry)
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
@@ -232,7 +234,7 @@ pycbc|installed = True
 
 [pegasus_profile-optimal_snr]
 condor|request_cpus = ${optimal_snr|cores}
-condor|+InitialRequestMemory = 8000
+condor|+InitialRequestMemory = ifthenelse(isundefined(DAGNodeRetry) || DAGNodeRetry == 0, 8000, 8000*DAGNodeRetry)
 dagman|priority = 5000
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
@@ -274,13 +276,13 @@ hints|execution.site = osgconnect
 pycbc|installed = True
 
 [pegasus_profile-plot_binnedhist]
-condor|+InitialRequestMemory = 8000
+condor|+InitialRequestMemory = ifthenelse(isundefined(DAGNodeRetry) || DAGNodeRetry == 0, 8000, 8000*DAGNodeRetry)
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
 [pegasus_profile-plot_coinc_snrchi]
-condor|+InitialRequestMemory = 8000
+condor|+InitialRequestMemory = ifthenelse(isundefined(DAGNodeRetry) || DAGNodeRetry == 0, 8000, 8000*DAGNodeRetry)
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
@@ -296,7 +298,7 @@ hints|execution.site = osgconnect
 pycbc|installed = true
 
 [pegasus_profile-plot_hist]
-condor|+InitialRequestMemory = 8000
+condor|+InitialRequestMemory = ifthenelse(isundefined(DAGNodeRetry) || DAGNodeRetry == 0, 8000, 8000*DAGNodeRetry)
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
@@ -322,13 +324,13 @@ hints|execution.site = osgconnect
 pycbc|installed = True
 
 [pegasus_profile-plot_singles]
-condor|+InitialRequestMemory = 8000
+condor|+InitialRequestMemory = ifthenelse(isundefined(DAGNodeRetry) || DAGNodeRetry == 0, 8000, 8000*DAGNodeRetry)
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
 [pegasus_profile-plot_snrchi]
-condor|+InitialRequestMemory = 8000
+condor|+InitialRequestMemory = ifthenelse(isundefined(DAGNodeRetry) || DAGNodeRetry == 0, 8000, 8000*DAGNodeRetry)
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
@@ -339,7 +341,7 @@ hints|execution.site = osgconnect
 pycbc|installed = True
 
 [pegasus_profile-plot_spectrum]
-condor|+InitialRequestMemory = 3000
+condor|+InitialRequestMemory = ifthenelse(isundefined(DAGNodeRetry) || DAGNodeRetry == 0, 3000, 3000*DAGNodeRetry)
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
@@ -356,14 +358,14 @@ hints|execution.site = osgconnect
 pycbc|installed = True
 
 [pegasus_profile-statmap]
-condor|+InitialRequestMemory = 8000
+condor|+InitialRequestMemory = ifthenelse(isundefined(DAGNodeRetry) || DAGNodeRetry == 0, 8000, 8000*DAGNodeRetry)
 dagman|priority = 500
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
 [pegasus_profile-statmap_inj]
-condor|+InitialRequestMemory = 8000
+condor|+InitialRequestMemory = ifthenelse(isundefined(DAGNodeRetry) || DAGNodeRetry == 0, 8000, 8000*DAGNodeRetry)
 dagman|priority = 500
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
@@ -386,25 +388,25 @@ hints|execution.site = osgconnect
 pycbc|installed = True
 
 [pegasus_profile-page_snglinfo]
-condor|+InitialRequestMemory = 4000
+condor|+InitialRequestMemory = ifthenelse(isundefined(DAGNodeRetry) || DAGNodeRetry == 0, 4000, 4000*DAGNodeRetry)
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
 [pegasus_profile-plot_trigger_timeseries]
-condor|+InitialRequestMemory = 8000
+condor|+InitialRequestMemory = ifthenelse(isundefined(DAGNodeRetry) || DAGNodeRetry == 0, 8000, 8000*DAGNodeRetry)
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
 [pegasus_profile-single_template_plot]
-condor|+InitialRequestMemory = 3000
+condor|+InitialRequestMemory = ifthenelse(isundefined(DAGNodeRetry) || DAGNodeRetry == 0, 3000, 3000*DAGNodeRetry)
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
 
 [pegasus_profile-single_template]
-condor|+InitialRequestMemory = 3000
+condor|+InitialRequestMemory = ifthenelse(isundefined(DAGNodeRetry) || DAGNodeRetry == 0, 3000, 3000*DAGNodeRetry)
 pycbc|site = osgconnect
 hints|execution.site = osgconnect
 pycbc|installed = True
